ingress/prometheus-ingress.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: ingress-secret-prom
#   namespace: monitoring
# type: kubernetes.io/tls
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZsekNDQkgrZ0F3SUJBZ0lRRGFGZjdpU1lIdzA3dUhlcUJnWW5oVEFOQmdrcWhraUc5dzBCQVFzRkFEQnkKTVFzd0NRWURWUVFHRXdKRFRqRWxNQ01HQTFVRUNoTWNWSEoxYzNSQmMybGhJRlJsWTJodWIyeHZaMmxsY3l3ZwpTVzVqTGpFZE1Cc0dBMVVFQ3hNVVJHOXRZV2x1SUZaaGJHbGtZWFJsWkNCVFUwd3hIVEFiQmdOVkJBTVRGRlJ5CmRYTjBRWE5wWVNCVVRGTWdVbE5CSUVOQk1CNFhEVEl3TURNeU1qQXdNREF3TUZvWERUSXhNRE15TWpFeU1EQXcKTUZvd0Z6RVZNQk1HQTFVRUF4TU1jSEp2YlM1ck4zTXVlSGw2TUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQwpBUThBTUlJQkNnS0N [...]
#   tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQ0KTUlJRXBBSUJBQUtDQVFFQW5yNEVyMWxuZmM3dGRtREIyUlUxNlplbUxqcXNWZDhnUDNOb0ZkcjZwcXVJczdhWQ0KekkvQ2RYNHdpcENiaWxRMEk0U3BTUnZoMGN2Qm51bDJiQktKRkVNMklIeWNyZTVMY0Rub3FYYWFYeXE2djRDTQ0KY2VwajR4UkNUNnZtc1o2Q2JZR0s1YXdrRXFpcVVOMzF5c2tuSHlsOGRqV2JBdEtqTGJjYWx1M1hnUFgySWd2cA0KSnpOYzFDQVJpMWlBSTVlSVBaM2kxMllXRnUyWVpLbzNHNFhkamVlUUhhVEYwNWRCd2FxRk5USjVBNlBISkM4RA0KUUF3YmxkUkpBZ1dQTU8zUnpVajBpWTg5cmJaVnhzNFg3azdaL1A0TkFqNEk2SDVUSjU4Q0ZZVHlwdmdJQWY5ZQ0KUTJ [...]

# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: ingress-secret-grafana
#   namespace: monitoring
# type: kubernetes.io/tls
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZuRENDQklTZ0F3SUJBZ0lRQXRkd1FzVXBmRFc3VmwrYWFlL1hFVEFOQmdrcWhraUc5dzBCQVFzRkFEQnkKTVFzd0NRWURWUVFHRXdKRFRqRWxNQ01HQTFVRUNoTWNWSEoxYzNSQmMybGhJRlJsWTJodWIyeHZaMmxsY3l3ZwpTVzVqTGpFZE1Cc0dBMVVFQ3hNVVJHOXRZV2x1SUZaaGJHbGtZWFJsWkNCVFUwd3hIVEFiQmdOVkJBTVRGRlJ5CmRYTjBRWE5wWVNCVVRGTWdVbE5CSUVOQk1CNFhEVEl3TURNeU1qQXdNREF3TUZvWERUSXhNRE15TWpFeU1EQXcKTUZvd0dqRVlNQllHQTFVRUF4TVBaM0poWm1GdVlTNXJOM011ZUhsNk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRgpBQU9DQVE4QU1JSUJ [...]
#   tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQ0KTUlJRW93SUJBQUtDQVFFQXlmQnliR2U1S1I4MW9kdmtJYy82NUVmUC9MYnQyZnJVL2NUbTlFQTJ2ZlJLMnBnVw0KNDFFaFVZTFZrUS9SL0xUcExXbUIrOC9JZ0p5UGFodCtlWTFZZU04bVNSZmJlV2tVeFJSekVWTTFzcmtmOEo1bA0KK1oxMTU0R3FVNFk2MzROK0ZyemJqaXUyZmJ2bGNkenl0ZFR4RXI2UE5TYVhMZ0RKVy9LZjRGQytmTW1sR0JvNQ0KcGNSNFdIVVVGUFlmdHpXQXZyOVZ4VGIwRExZV1ZFM0xNWW1leHF6cVBVUVRMVjhPYXZ0a0FVRHpmS1VKeld5Sw0KemRFVTI2N1FSUDlWaTBBUXpUZG1sNHJOZWc0ZzY4byt6a0dhYkQwbUNsalF5WlozaENVNnZnUUZTVk5DT25rNw0KVVF [...]

# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: ingress-secret-alter
#   namespace: monitoring
# type: kubernetes.io/tls
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZtRENDQklDZ0F3SUJBZ0lRQkRXSTV1bzFPVDRVMG1YRmY2c1d3akFOQmdrcWhraUc5dzBCQVFzRkFEQnkKTVFzd0NRWURWUVFHRXdKRFRqRWxNQ01HQTFVRUNoTWNWSEoxYzNSQmMybGhJRlJsWTJodWIyeHZaMmxsY3l3ZwpTVzVqTGpFZE1Cc0dBMVVFQ3hNVVJHOXRZV2x1SUZaaGJHbGtZWFJsWkNCVFUwd3hIVEFiQmdOVkJBTVRGRlJ5CmRYTjBRWE5wWVNCVVRGTWdVbE5CSUVOQk1CNFhEVEl3TURNeU1qQXdNREF3TUZvWERUSXhNRE15TWpFeU1EQXcKTUZvd0dERVdNQlFHQTFVRUF4TU5ZV3gwWlhJdWF6ZHpMbmg1ZWpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRApnZ0VQQURDQ0FRb0N [...]
#   tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQ0KTUlJRW93SUJBQUtDQVFFQXJ0ejBFQVQwQ1VDZGhLUlE3SmQ0WTU0eUxLeHFCZXdNNG1mUWdBcTlHTVdJc3ZMaQ0KdDJIejhOSTR2ckxkRTdvd01LQVNuaUpweld0QlZkNlFMeVBFNzhiTnJKOUJzNmdwWENZSW41dlFvMHpQNnB2Kw0KdlBuZi9LQWZ5blZ1OGl1b3hhdmdIRlRlbFRVS2JUbUV1eFhxSk5vYm1iazYwNm9YTFRVSGJjbDlYdFlIeFp3Zw0KSStrWUFlZFNGRUZuOVgrSFVuS3BSSk95a1Vjd290aFVrUjgrZ2NQWStjZkMzdVVYWnYvVWpERXdpT0FLc2JxaQ0KL09wb1A0RWRaR3JUc2ZHVUwzQm8vR1ZPbDFnWmQ1SHJiTjY1NmluMmROQnZRWUtzVjVEUHhuRGM5aUpDWitMQw0KWlp [...]

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: prom.k7s.xyz
  namespace: monitoring
spec:
  # tls:
  # - hosts:
  #   - prom.k7s.xyz
  #   # - grafana.k7s.xyz
  #   # - alter.k7s.xyz
  #   secretName: ingress-secret-prom
  rules:
  - host: prom.k7s.xyz
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  # - host: grafana.k7s.xyz
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: grafana
  #         servicePort: 3000
  # - host: alter.k7s.xyz
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: alertmanager-main
  #         servicePort: 9093
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: grafana.k7s.xyz
  namespace: monitoring
spec:
  # tls:
  # - hosts:
  #   - grafana.k7s.xyz
  #   secretName: ingress-secret-grafana
  rules:
  - host: grafana.k7s.xyz
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: alter.k7s.xyz
  namespace: monitoring
spec:
  # tls:
  # - hosts:
  #   - alter.k7s.xyz
  #   secretName: ingress-secret-alter
  rules:
  - host: alter.k7s.xyz
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
